# whoosh-reloaded

./: .buildinfo  .codiumai.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  MANIFEST.in  README.md  analysis.html  batch.html  codecov.yml  dates.html  facets.html  fieldcaches.html  genindex.html  glossary.html  highlight.html  index.html  indexing.html  intro.html  keywords.html  nested.html  ngrams.html  objects.inv  parsing.html  py-modindex.html  pyproject.toml  query.html  querylang.html  quickstart.html  recipes.html  requirements-dev.txt  requirements.txt  schema.html  search.html  searchindex.js  searching.html  setup.cfg  setup.py  spelling.html  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: auto-merge.yml  dependabot-uv-export.yml  dependabot.yml  deploy-github-pages.yml  first-interaction.yml  issue_labeler.yml  nox-cov.yml  nox-test.yml  python-package.yml  python-publish.yml  stale_bot.yaml  test.yml  tox.yml
_modules/: index.html
_modules/whoosh/: collectors.html  columns.html  fields.html  formats.html  highlight.html  idsets.html  index.html  reading.html  scoring.html  searching.html  sorting.html  spelling.html  util.html  writing.html
_modules/whoosh/analysis/: acore.html  analyzers.html  filters.html  intraword.html  morph.html  ngrams.html  tokenizers.html
_modules/whoosh/codec/: base.html
_modules/whoosh/filedb/: filestore.html  filetables.html  structfile.html
_modules/whoosh/lang/: morph_en.html  porter.html  wordnet.html
_modules/whoosh/matching/: binary.html  mcore.html  wrappers.html
_modules/whoosh/qparser/: default.html  plugins.html  syntax.html
_modules/whoosh/query/: compound.html  nested.html  positional.html  qcore.html  ranges.html  spans.html  terms.html  wrappers.html
_modules/whoosh_reloaded/: collectors.html  columns.html  fields.html  formats.html  highlight.html  idsets.html  index.html  reading.html  scoring.html  searching.html  sorting.html  spelling.html  util.html  writing.html
_sources/: analysis.rst.txt  dates.rst.txt  facets.rst.txt  fieldcaches.rst.txt  glossary.rst.txt  highlight.rst.txt  indexing.rst.txt  parsing.rst.txt  query.rst.txt  querylang.rst.txt  quickstart.rst.txt  spelling.rst.txt
_sources/api/: collectors.rst.txt  columns.rst.txt  fields.rst.txt  formats.rst.txt  qparser.rst.txt  query.rst.txt  scoring.rst.txt  searching.rst.txt  sorting.rst.txt  spelling.rst.txt
_sources/releases/: 0_3.rst.txt  index.rst.txt
_sources/tech/: backend.rst.txt
_static/: documentation_options.js
api/: analysis.html  api.html  collectors.html  columns.html  fields.html  formats.html  highlight.html  idsets.html  index.html  matching.html  qparser.html  query.html  reading.html  scoring.html  searching.html  sorting.html  spelling.html  util.html  writing.html
api/codec/: base.html
api/filedb/: filestore.html  filetables.html  structfile.html
api/lang/: morph_en.html  porter.html  wordnet.html
api/support/: charset.html  levenshtein.html
benchmark/: dictionary.py  enron.py  marc21.py  reuters.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: analysis.rst  batch.rst  conf.py  dates.rst  facets.rst  fieldcaches.rst  highlight.rst  index.rst  indexing.rst  intro.rst  keywords.rst  nested.rst  ngrams.rst  parsing.rst  query.rst  querylang.rst  quickstart.rst  recipes.rst  schema.rst  searching.rst  spelling.rst  stemming.rst  threads.rst
releases/: 0_3.html  1_0.html  2_0.html  index.html
scripts/: make_checkpoint.py  pylint.ini  read_checkpoint.py
src/whoosh/: __init__.py  classify.py  collectors.py  columns.py  compat.py  externalsort.py  fields.py  formats.py  highlight.py  idsets.py  index.py  legacy.py  multiproc.py  reading.py  scoring.py  searching.py  sorting.py  spelling.py  system.py  writing.py
src/whoosh_reloaded/: classify.py  collectors.py  columns.py  compat.py  externalsort.py  fields.py  formats.py  highlight.py  idsets.py  index.py  legacy.py  multiproc.py  reading.py  scoring.py  searching.py  sorting.py  spelling.py  writing.py
stress/: test_bigfacet.py  test_bigindex.py  test_bigsort.py  test_bigtable.py  test_hugeindex.py  test_threading.py  test_update.py
tech/: backend.html  filedb.html  index.html
tests/: test_analysis.py  test_automata.py  test_bits.py  test_bloom.py  test_classify.py  test_codecs.py  test_collector.py  test_columns.py  test_compound.py  test_dateparse.py  test_fields.py  test_flexible.py  test_highlighting.py  test_indexing.py  test_jieba.py  test_matching.py  test_misc.py  test_mpwriter.py  test_nested.py  test_parse_plugins.py  test_parsing.py  test_postings.py  test_quality.py  test_queries.py  test_reading.py  test_results.py  test_searching.py  test_sorting.py  test_spans.py  test_spelling.py  test_stem.py  test_tables.py  test_vectors.py  test_weightings.py  test_writing.py
(+255 files in other folders)
